# shikibetsu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
coverage/: coverage.json  index.html
coverage/src/: args.rs.html  entries_handler.rs.html  entry.rs.html  index.html  lib.rs.html
src/: args.rs  entries_handler.rs  entry.rs  lib.rs  main.rs
